--- a/style.css
+++ b/style.css
@@ -5,21 +5,21 @@
 	
 	
 #switch{
-	background:black;
-	height:193px;
-	width:100vw;
-	position: fixed;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	font-family:"Roboto";
-	display:none;
-	align-items: stretch;
-	font-size:16px;
-	z-index:100 !important;
+	  background: black;
+	  height: 193px;
+	  width: 100vw;
+	  position: fixed;
+	  left: 0;
+	  right: 0;
+	  bottom: 0;
+	  font-family: "Roboto";
+	  display: none;
+	  align-items: stretch;
+	  font-size: 16px;
+	  z-index: 100 !important;
 }
 #switch button {
-	border:solid;
+	border:1px solid;
 	background:none;
 	height:100%;
 	margin:0;
@@ -28,8 +28,6 @@
 	font-size:22px;
 	border-radius:none;
 	outline:none;
-	padding-left: 40px;
-	padding-right: 40px;
 }
 #switch button:active{
 	background:rgba(0,0,0,0.2);
@@ -41,4 +39,8 @@
 	max-width:inherit;
 	padding-left:0 !important;
 	padding-right:0 !important;
+}
+
+#switch .col-xs-4{
+padding:0px !important;
 }
