--- a/style.css
+++ b/style.css
@@ -29,6 +29,8 @@
 	border-radius:none;
 	outline:none;
 	background-color: #333;
+	padding: 10% 0px;
+  	font-weight: bold;
 }
 #switch button:active{
 	background:rgba(0,0,0,0.2);
