--- a/style.css
+++ b/style.css
@@ -6,8 +6,6 @@
 	
 #switch{
 	  background: #333;
-	  height: 50%;
-	  width: 100vw;
 	  position: fixed;
 	  left: 0;
 	  right: 0;
@@ -51,4 +49,5 @@
 padding: 3% 0px !important;
   border: 2px solid #000;
   border-collapse: collapse !important;
+	background: #333;
 }
