--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@
 	  outline: none;
 	  background-color: #333;
 	  font-weight: bold;
+	padding: 3% 0px !important;
 }
 #switch button:active{
 	background:rgba(0,0,0,0.2);
@@ -46,7 +47,7 @@
 }
 
 .button-ctnr{
-padding: 3% 0px !important;
+/*padding: 3% 0px !important;*/
   border: 2px solid #000;
   border-collapse: collapse !important;
 	background: #333;
