--- a/style.css
+++ b/style.css
@@ -5,34 +5,36 @@
 	
 	
 #switch{
-	  background: #616161;
-	  position: fixed;
-	  left: 0;
-	  right: 0;
-	  bottom: 0;
-	  font-family: "Roboto";
-	  display: none;
-	  align-items: stretch;
-	  font-size: 16px;
-	  z-index: 100 !important;
+            background: #0E0E0E;
+            position: fixed;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            font-family: "Roboto";
+            display: none;
+            align-items: stretch;
+            font-size: 16px;
+            z-index: 10000 !important;
 }
+
 #switch button {
-	border: none;
-	  background: none;
-	  height: 100%;
-	  margin: 0;
-	  width: 100%;
-	  color: white;
-	  font-size: 22px;
-	  border-radius: none;
-	  outline: none;
-	  background-color: #616161;
-	  font-weight: bold;
-	padding: 10% 0px !important;
+            border: none;
+            background: none;
+            height: 100%;
+            margin: 0;
+            width: 100%;
+            color: white;
+            font-size: 22px;
+            border-radius: none;
+            outline: none;
+            background-color: #4C4C4C;
+            font-weight: bold;
+            padding: 5% 0px !important;
 }
 #switch button:active{
-	background:rgba(0,0,0,0.2);
+            background:rgba(0,0,0,0.2);
 }
+
 .showAll{
 	overflow:hidden;
 	text-overflow:ellipsis !important;
@@ -43,12 +45,18 @@
 }
 
 .padding-none{
-	padding:0px !important;
+            padding:0px !important;
 }
 
 .button-ctnr{
-/*padding: 3% 0px !important;*/
-  border: 2px solid #000;
-  border-collapse: collapse !important;
-	background: #616161;
+            border: 2px solid #0E0E0E;
+            border-collapse: collapse !important;
+            background: #0E0E0E;
+            width: 33.333333% !important;
 }
+
+.custom-numeric-keyboard{
+            cursor: text !important;
+            background: white !important;
+}
+
